Fix lack of word wrapping on mobile
This is for https://github.com/donejs/donejs/issues/588

--- a/static/styles/_shared_layout.less
+++ b/static/styles/_shared_layout.less
@@ -87,7 +87,7 @@ body:not(.donejs):not(.community) {
 			.description,
 			.comment {
 				a {
-					white-space: nowrap;
+					white-space: normal;
 				}
 				a[href*='//']:not([href*='donejs.com']) {
 					position: relative;
